--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
+    "redux-actions": "^2.6.5",
     "redux-thunk": "^2.3.0",
     "sass": "^1.42.1",
     "semantic-ui-css": "^2.4.1"
